# avatar-rs

./: .gitmodules  Cargo.toml  README.md
avatar-cli/: Cargo.toml
avatar-cli/examples/: benchmark.rs  blinky.rs  i2c_bme280.rs  nrf52_blinky.rs  serial_hello.rs
avatar-cli/src/: main.rs
avatar-common/: Cargo.toml
avatar-common/src/: lib.rs
avatar-probe-rs/: Cargo.toml
avatar-probe-rs/src/: lib.rs
avatar-stm32f103c8/: Cargo.toml  openocd.cfg  openocd.gdb
avatar-stm32f103c8/.cargo/: config
avatar-stm32f103c8/src/: main.rs
avatar-usb/: Cargo.toml
avatar-usb/src/: class.rs  host.rs  lib.rs
examples-blue-pill/: Cargo.toml
examples-blue-pill/examples/: blinky.rs
examples-dwm1001-dev/: Cargo.toml
examples-dwm1001-dev/examples/: blinky.rs
examples-nucleo-f042k6/: Cargo.toml
examples-nucleo-f042k6/examples/: test_hpdl.rs
